# private_virtual_assistant

./: .gitignore  Dockerfile  README.md  README_STATUS.md  deploy.sh  initialize.py  main.py  plan.py  pyproject.toml  requirements.txt  run.py  run_new.py  run_overnight.py  run_temp.py
.github/workflows/: ci-and-deploy.yml
agents/: agents.py
review/: DBautogen.md  func.py
settings/: func.py  gcp.py  modules.txt  plot.py
temp/: main.yml
temporary/: report.md
tools/: info.py  selenium.py  selenium_plt.py  web.py
