[tool.poetry]
name = "ai-agents-project"
version = "0.1.0"
description = "Working ai agents in browser"
authors = ["Pawel Masior"]

[tool.poetry.dependencies]
python = ">=3.11.3,<3.12"
autogen = "1.0.16"
pyautogen = "0.2.34"
google = "^3.0.0"
image = "^1.5.33"
matplotlib = "^3.7.1"
numpy = "^1.24.4"
openai = "^1.37.0"
pandas = "^2.1.3"
scipy = "^1.10.1"
seaborn = "^0.12.2"
selenium = "^4.14.0"
squarify = "^0.4.3"
twilio = "^9.2.3"
tavily-python = "^0.4.0"
unstructured = '==0.10.25'
pyowm = '3.3.0'
python-dotenv = "1.0.0"
langchain-openai = "^0.0.5"
google-api-core = "2.8.1"
google-auth = "2.6.6"
google-auth-oauthlib = "0.4.6"
google-cloud-bigquery = "^3.0.0"
google-cloud-bigquery-storage = "2.13.1"
google-cloud-core = "2.3.0"
google-cloud-storage = "2.3.0"
google-crc32c = "1.3.0"
google-pasta = "0.2.0"
google-resumable-media = "2.3.3"
googleapis-common-protos = "1.56.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"